More idiomatic.